@@ -1,5 +1,3 @@
-*) fix focus on login authenticator--should be in username or password.
-
 *) test and fix subscribing to folders w/disconnected operation (?).
 	check loading messages for offline-enabled folder; see if we
 	get enough messages.
